--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/nortal/4179ba63-1fb5-47d8-b447-cc43042a4284'>Nortal - eGovernment Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qodaVfwq&k=Job&j=oi3tbfwJ&__jvst=Employee+Referral&__jvsd=sI5ktgwl&__jvsc=Twitter&bid=nGkcqMwT'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/qualys/job/ozZtbfwW'>Qualys Careers - Global Compensation Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/nortal/4179ba63-1fb5-47d8-b447-cc43042a4284'>Nortal - eGovernment Project Manager</a></h5> 
+<p><span class="badge badge-light">Stockholm</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698615531-compliance-program-manager'>Infotree Service Inc Compliance Program Manager | SmartRecruiters</a></h5> 
@@ -132,7 +140,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -178,7 +186,7 @@
 <p><span class="badge badge-light">New York  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anaplan/jobs/4482084002?gh_src=659d87612'>Job Application for Senior Program Manager, Customer Operations at Anaplan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anaplan/jobs/4482084002?gh_src=659d87612'>Job Application for Senior Program Manager, Customer Operations at Anaplan</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -194,7 +202,7 @@
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/f735548b-ce7d-42b0-83bf-6d1d65dda519'>Geotab - Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/geotab/f735548b-ce7d-42b0-83bf-6d1d65dda519'>Geotab - Project Manager</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -210,7 +218,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://zalora.applytojob.com/apply/QMCmTSGfJm/Regional-Project-Manager'>Regional Project Manager - ZALORA SEA - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/QMCmTSGfJm/Regional-Project-Manager'>Regional Project Manager - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -292,7 +300,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/icertis/0caaa3d5-e80d-4d4c-8778-ead9f1990b6b'>Icertis - Senior Program Manager - Professional Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/icertis/0caaa3d5-e80d-4d4c-8778-ead9f1990b6b'>Icertis - Senior Program Manager - Professional Services</a></h5> 
 <p><span class="badge badge-light">Bellevue, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -439,16 +447,6 @@
 <hr/>
 <h5><a href='https://jobs.jobvite.com/xylem/job/oeGrbfwg'>Xylem Careers - Project Manager/Sr. Project Manager</a></h5> 
 <p><span class="badge badge-light">Charlotte North Carolina</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://ebanx.recruiterbox.com/jobs/fk03ide/'>
-    Project Manager at EBANX
-</a></h5> 
-<p><span class="badge badge-light">Curitiba</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698552972-project-senior-project-manager-real-estate'>Turner & Townsend Project & Senior Project Manager  - Real Estate | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
