--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/spell/jobs/4471407002'>Job Application for Lead Product Manager at Spell</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://sidecar.applytojob.com/apply/DqDwAhre0l/Product-Manager-I'>Product Manager I - Sidecar - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cultureamp/jobs/1940954'>Job Application for Senior Product Manager at Culture Amp</a></h5> 
+<p><span class="badge badge-light">Melbourne  Melbourne San Francisco New York London</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://leasequery.applytojob.com/apply/WWno0NJnPI/Product-Owner'>Product Owner - LeaseQuery - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/revolut/445aa98c-dd62-49ad-a217-f9f21c8c3bb1'>Revolut - Product Designer - Wealth & Trading (copy)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -106,7 +122,7 @@
 <p><span class="badge badge-light">Seattle Lehi, UT     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/xkxzQYHiBd/Product-Manager-Mobile-Seattle-WA'>Product Manager - Mobile (Seattle, WA) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/xkxzQYHiBd/Product-Manager-Mobile-Seattle-WA'>Product Manager - Mobile (Seattle, WA) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Seattle, WASeattle Seattle, WASeattle, WA     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -182,7 +198,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940172'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940172'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -276,7 +292,7 @@
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://vertexinc.referrals.selectminds.com/jobs/product-manager-i-899'>Product Manager I - Vertex Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vertexinc.referrals.selectminds.com/jobs/product-manager-i-899'>Product Manager I - Vertex Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -338,7 +354,7 @@
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -435,22 +451,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=n197oMwW'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/huntergibbons/job/1tcdejbmpjfsd8op7g8jhjnyxc'>Technical Product Manager | Hunter Gibbons Career Portal</a></h5> 
-<p><span class="badge badge-light">Washington, DC</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://cardtronics.hiringthing.com/job/156897/director-global-software-product-manager'>Director, Global Software Product Manager @ Cardtronics</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
-<p><span class="badge badge-light">San Francisco, California</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
-<p><span class="badge badge-light">San Francisco, California</span></p>
-<p>Posted on: 2019-10-30</p>
 <hr/>
 
 
